--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <ul>
+      <ul id="mineul">
         <li><a href="a.html">第一个项目站</a></li>
         <li><a href="b.html">第二个项目站</a></li>
         <li><a href="c.html">第三个项目站</a></li>
